WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111523
[Custom Elements] CustomElementConstructor::m_name doesn't have any good use
https://bugs.webkit.org/show_bug.cgi?id=111523
Summary
[Custom Elements] CustomElementConstructor::m_name doesn't have any good use
Hajime Morrita
Reported
2013-03-05 22:12:18 PST
It is just a historial remaining and should be renamed. m_tagName should become m_name instead.
Attachments
Patch
(6.67 KB, patch)
2013-03-05 22:43 PST
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.67 KB, patch)
2013-03-05 22:51 PST
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2013-03-05 22:43:33 PST
Created
attachment 191655
[details]
Patch
Kentaro Hara
Comment 2
2013-03-05 22:46:26 PST
Comment on
attachment 191655
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=191655&action=review
Looks OK.
> Source/WebCore/ChangeLog:3 > + [Custom Elements] CustomElementConstructor::m_name doesn't have any good use.
I was told to use [X] only for port names. You can use "Custom Elements:" from your next patch.
Hajime Morrita
Comment 3
2013-03-05 22:49:31 PST
(In reply to
comment #2
)
> > I was told to use [X] only for port names. You can use "Custom Elements:" from your next patch.
Got it. Will do so in the landing patch too.
Hajime Morrita
Comment 4
2013-03-05 22:51:11 PST
Created
attachment 191656
[details]
Patch for landing
WebKit Review Bot
Comment 5
2013-03-05 23:55:53 PST
Comment on
attachment 191656
[details]
Patch for landing Clearing flags on attachment: 191656 Committed
r144889
: <
http://trac.webkit.org/changeset/144889
>
WebKit Review Bot
Comment 6
2013-03-05 23:55:57 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug