Custom Elements: CustomElementConstructor::m_name doesn't have any good use. https://bugs.webkit.org/show_bug.cgi?id=111523

Reviewed by Kentaro Hara.

This change removes CustomElementConstructor::m_name and renames
m_tagName to m_name. Now generated function name is same as interface name.

Originally, m_name was added to specify the generated constructor
name. An early version of custom element allows to give the name,
but it no longer says anything about that.

The rename is to align the semantics of type extension mechanism
of Custom Elements, where the name of a custom element isn't
necessarily a tag name.

No new tests. Just removing old code.

* bindings/scripts/CodeGeneratorV8.pm:
(GenerateHeader):
* dom/CustomElementConstructor.cpp:
(WebCore::CustomElementConstructor::create):
(WebCore::CustomElementConstructor::CustomElementConstructor):
(WebCore::CustomElementConstructor::createElement):
* dom/CustomElementConstructor.h:
(CustomElementConstructor):
(WebCore::CustomElementConstructor::name):
* dom/CustomElementRegistry.cpp:
(WebCore::CustomElementRegistry::registerElement):


Canonical link: https://commits.webkit.org/129910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144889 268f45cc-cd09-0410-ab3c-d52691b4dbfc